src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__env_var_in_tool.snap
---
source: src/config/config_file/mise_toml.rs
expression: "replace_path(&format!(\"{:#?}\", cf.to_tool_request_set().unwrap().tools))"
---
{
    BackendArg(terraform): [
        ToolRequest {
            backend: BackendArg(terraform),
            source: MiseToml(
                "~/cwd/.test.mise.toml",
            ),
            options: ToolVersionOptions {
                os: None,
                install_env: {},
                opts: {},
            },
            kind: Version {
                version: "1.0.0",
            },
            reason: Install,
        },
    ],
    BackendArg(jq): [
        ToolRequest {
            backend: BackendArg(jq),
            source: MiseToml(
                "~/cwd/.test.mise.toml",
            ),
            options: ToolVersionOptions {
                os: None,
                install_env: {},
                opts: {},
            },
            kind: Prefix {
                prefix: "1.6",
            },
            reason: Install,
        },
    ],
}
