src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__fixture-3.snap
---
source: src/config/config_file/mise_toml.rs
expression: "replace_path(&format!(\"{:#?}\", cf.to_tool_request_set().unwrap()))"
---
ToolRequestSet {
    tools: {
        BackendArg(terraform): [
            ToolRequest {
                backend: BackendArg(terraform),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Version {
                    version: "1.0.0",
                },
                reason: Install,
            },
        ],
        BackendArg(node): [
            ToolRequest {
                backend: BackendArg(node),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Version {
                    version: "18",
                },
                reason: Install,
            },
            ToolRequest {
                backend: BackendArg(node),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Prefix {
                    prefix: "20",
                },
                reason: Install,
            },
            ToolRequest {
                backend: BackendArg(node),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Ref {
                    ref_: "master",
                    ref_type: "ref",
                },
                reason: Install,
            },
            ToolRequest {
                backend: BackendArg(node),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Path {
                    path: "~/.nodes/18",
                },
                reason: Install,
            },
        ],
        BackendArg(jq): [
            ToolRequest {
                backend: BackendArg(jq),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Prefix {
                    prefix: "1.6",
                },
                reason: Install,
            },
        ],
        BackendArg(shellcheck): [
            ToolRequest {
                backend: BackendArg(shellcheck),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Version {
                    version: "0.9.0",
                },
                reason: Install,
            },
        ],
        BackendArg(python): [
            ToolRequest {
                backend: BackendArg(python),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {
                        "venv": String(
                            ".venv",
                        ),
                    },
                },
                kind: Version {
                    version: "3.10.0",
                },
                reason: Install,
            },
            ToolRequest {
                backend: BackendArg(python),
                source: MiseToml(
                    "~/fixtures/.mise.toml",
                ),
                options: ToolVersionOptions {
                    os: None,
                    install_env: {},
                    opts: {},
                },
                kind: Version {
                    version: "3.9.0",
                },
                reason: Install,
            },
        ],
    },
    sources: {
        BackendArg(jq): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(node): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(python): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(shellcheck): MiseToml(
            "~/fixtures/.mise.toml",
        ),
        BackendArg(terraform): MiseToml(
            "~/fixtures/.mise.toml",
        ),
    },
    unknown_tools: [],
}
