src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__replace_versions.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.to_toolset().unwrap()
---
Toolset {
    versions: {
        BackendArg(node): ToolVersionList {
            backend: BackendArg(node),
            versions: [],
            requests: [
                ToolRequest {
                    backend: BackendArg(node),
                    source: MiseToml(
                        "/tmp/.mise.toml",
                    ),
                    options: ToolVersionOptions {
                        os: None,
                        install_env: {},
                        opts: {},
                    },
                    kind: Version {
                        version: "16.0.1",
                    },
                    reason: Install,
                },
                ToolRequest {
                    backend: BackendArg(node),
                    source: MiseToml(
                        "/tmp/.mise.toml",
                    ),
                    options: ToolVersionOptions {
                        os: None,
                        install_env: {},
                        opts: {},
                    },
                    kind: Version {
                        version: "18.0.1",
                    },
                    reason: Install,
                },
            ],
            source: MiseToml(
                "/tmp/.mise.toml",
            ),
        },
    },
    source: Some(
        MiseToml(
            "/tmp/.mise.toml",
        ),
    ),
    tera_ctx: OnceCell {
        value: None,
    },
}
